# notebook_mcp

./: .gitignore  README.md  pyproject.toml
nbmcp/: cli.py  indexer.py  searcher.py  server.py
