[project]
name = "nbmcp"
version = "0.1.0"
description = "notebook mcp server"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "sh (>=2.2.2,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "minlog (==0.6.0)",
    "mcp (>=1.5.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nbmcp = "nbmcp.cli:main" 
